# intro-to-fp-bird-wadler

./: README.md  pyproject.toml
intro_to_fp_bird_wadler/: common.py
intro_to_fp_bird_wadler/ch4/: numbers_to_words.py  text_processing.py  variable_length_arithmetic.py
tests/: test_numbers_to_words.py  test_text_processing.py  test_variable_length_arithmetic.py
